--- a/cdap-ui/app/directives/widget-container/widget-complex-schema-editor/widget-complex-schema-editor.html
+++ b/cdap-ui/app/directives/widget-container/widget-complex-schema-editor/widget-complex-schema-editor.html
@@ -19,7 +19,7 @@
     <my-complex-schema
       ng-model="SchemaEditor.schemaObj"
       record-name="'etlSchemaBody'"
-      is-disabled="SchemaEditor.isDisabled"
+      is-disabled="SchemaEditor.isDisabled || SchemaEditor.implicitSchemaPresent"
       parent-format-output="SchemaEditor.formatOutput()">
     </my-complex-schema>
   </div>
