--- a/cdap-ui/app/directives/widget-container/widget-complex-schema-editor/widget-complex-schema-editor.html
+++ b/cdap-ui/app/directives/widget-container/widget-complex-schema-editor/widget-complex-schema-editor.html
@@ -20,7 +20,8 @@
       ng-model="SchemaEditor.schemaObj"
       record-name="'etlSchemaBody'"
       is-disabled="SchemaEditor.isDisabled || SchemaEditor.implicitSchemaPresent"
-      parent-format-output="SchemaEditor.formatOutput()">
+      parent-format-output="SchemaEditor.formatOutput()"
+      schema-prefix="SchemaEditor.schemaPrefix">
     </my-complex-schema>
   </div>
 
