--- a/cdap-ui/app/directives/complex-schema/complex-schema.html
+++ b/cdap-ui/app/directives/complex-schema/complex-schema.html
@@ -62,7 +62,7 @@
           <select class="form-control"
                   ng-model="field.displayType"
                   ng-options="option as option for option in ComplexSchema.SCHEMA_TYPES"
-                  ng-change="(field.type = field.displayType) && ComplexSchema.formatOutput()">
+                  ng-change="ComplexSchema.changeType(field)">
           </select>
         </div>
 
